--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_5_clients.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_5_clients.yml
@@ -18,11 +18,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/api-access.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/api-access.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
@@ -40,11 +36,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/grafana.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/grafana.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
@@ -62,11 +54,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/gravitee.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/gravitee.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
@@ -78,73 +66,41 @@
     msg: "Failed. Client may already exist."
   when: client_gravitee_response.status == 409
 
-<<<<<<< HEAD
 - name: Create Admin Tools Client
-=======
-- name: Create PGAdmin Client
->>>>>>> 70f8f1d (deployment and initial configs)
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/admin_tools.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/pgadmin.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201,409
-<<<<<<< HEAD
   register: client_admin_tools_response
-=======
-  register: client_pgadmin_response
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: Check if already existing.
   debug:
     msg: "Failed. Client may already exist."
-<<<<<<< HEAD
   when: client_admin_tools_response.status == 409
 
 - name: Create Masterportal Client
-=======
-  when: client_pgadmin_response.status == 409
-
-### Application Clients
-
-- name: Create Citywalks Client
->>>>>>> 70f8f1d (deployment and initial configs)
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/masterportal.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/citywalks.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201,409
-<<<<<<< HEAD
   register: client_masterportal_response
-=======
-  register: client_citywalks_response
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: Check if already existing.
   debug:
     msg: "Failed. Client may already exist."
-<<<<<<< HEAD
   when: client_masterportal_response.status == 409
-=======
-  when: client_citywalks_response.status == 409
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: Create CKAN Client
   uri:
@@ -152,11 +108,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/ckan.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/ckan.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
@@ -168,57 +120,23 @@
     msg: "Failed. Client may already exist."
   when: client_ckan_response.status == 409
 
-<<<<<<< HEAD
 - name: Create MINIO Client
-=======
-- name: Create Geodata Client
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
     return_content: yes
     body_format: json
-    body: "{{ lookup('template', 'idm/clients/geodata.json.j2') }}"
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 201,409
-  register: client_geodata_response
-
-- name: Check if already existing.
-  debug:
-    msg: "Failed. Client may already exist."
-  when: client_geodata_response.status == 409
-
-- name: Create NodeRED Client
->>>>>>> 70f8f1d (deployment and initial configs)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients"
-    return_content: yes
-    body_format: json
-<<<<<<< HEAD
     body: "{{ lookup('template', 'keycloak/clients/minio.json.j2') }}"
-=======
-    body: "{{ lookup('template', 'idm/clients/nodered.json.j2') }}"
->>>>>>> 70f8f1d (deployment and initial configs)
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201,409
-<<<<<<< HEAD
   register: client_minio_response
-=======
-  register: client_nodered_response
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: Check if already existing.
   debug:
     msg: "Failed. Client may already exist."
-<<<<<<< HEAD
   when: client_minio_response.status == 409
-=======
-  when: client_nodered_response.status == 409
->>>>>>> 70f8f1d (deployment and initial configs)
 
 # Retrieve id and secret for all clients
 
@@ -237,21 +155,20 @@
   set_fact:
     client_id_api_access: "{{ clients.json | json_query(query) }}"
   vars:
-    query: "[?clientId== '{{ IDM_CLIENT_API_ACCESS }}'].id | [0]"
+    query: "[?clientId== '{{ keycloak.IDM_CLIENT_API_ACCESS }}'].id | [0]"
 
 - name: "Get keycloak client Grafana ID."
   set_fact:
     client_id_grafana: "{{ clients.json | json_query(query) }}"
   vars:
-    query: "[?clientId== '{{ IDM_CLIENT_GRAFANA }}'].id | [0]"
+    query: "[?clientId== '{{ keycloak.IDM_CLIENT_GRAFANA }}'].id | [0]"
 
 - name: "Get keycloak client Gravitee ID."
   set_fact:
     client_id_gravitee: "{{ clients.json | json_query(query) }}"
   vars:
-    query: "[?clientId== '{{ IDM_CLIENT_GRAVITEE }}'].id | [0]"
+    query: "[?clientId== '{{ keycloak.IDM_CLIENT_GRAVITEE }}'].id | [0]"
 
-<<<<<<< HEAD
 - name: "Get keycloak client Admin Tools ID."
   set_fact:
     client_id_admin_tools: "{{ clients.json | json_query(query) }}"
@@ -275,37 +192,7 @@
     client_id_minio: "{{ clients.json | json_query(query) }}"
   vars:
     query: "[?clientId== '{{ IDM_CLIENT_MINIO }}'].id | [0]"   
-=======
-- name: "Get keycloak client PGAdmin ID."
-  set_fact:
-    client_id_pgadmin: "{{ clients.json | json_query(query) }}"
-  vars:
-    query: "[?clientId== '{{ IDM_CLIENT_PGADMIN }}'].id | [0]"
 
-- name: "Get keycloak client citywalk ID."
-  set_fact:
-    client_id_citywalk: "{{ clients.json | json_query(query) }}"
-  vars:
-    query: "[?clientId== '{{ IDM_CLIENT_CITYWALKS }}'].id | [0]"
-
-- name: "Get keycloak client ckan ID."
-  set_fact:
-    client_id_ckan: "{{ clients.json | json_query(query) }}"
-  vars:
-    query: "[?clientId== '{{ IDM_CLIENT_CKAN }}'].id | [0]"
-
-- name: "Get keycloak client geodata ID."
-  set_fact:
-    client_id_geodata: "{{ clients.json | json_query(query) }}"
-  vars:
-    query: "[?clientId== '{{ IDM_CLIENT_GEODATA }}'].id | [0]"
-
-- name: "Get keycloak client nodered ID."
-  set_fact:
-    client_id_nodered: "{{ clients.json | json_query(query) }}"
-  vars:
-    query: "[?clientId== '{{ IDM_CLIENT_NODERED }}'].id | [0]"
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: Get Client Secret API Access
   uri:
@@ -340,7 +227,6 @@
     status_code: 200
   register: keycloak_client_gravitee_secret_response
 
-<<<<<<< HEAD
 - name: Get Client Secret Admin Tools
   uri:
     method: GET
@@ -378,23 +264,13 @@
   uri:
     method: GET
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_minio }}/client-secret"
-=======
-- name: Get Client Secret PGAdmin
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_pgadmin }}/client-secret"
->>>>>>> 70f8f1d (deployment and initial configs)
     return_content: yes
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 200
-<<<<<<< HEAD
   register: keycloak_client_minio_secret_response
 
-=======
-  register: keycloak_client_pgadmin_secret_response
->>>>>>> 70f8f1d (deployment and initial configs)
 
 - name: "Set IDM client secret API Access."
   set_fact:
@@ -411,7 +287,6 @@
     IDM_CLIENT_SECRET_GRAVITEE: "{{ keycloak_client_gravitee_secret_response.json.value }}"
     cacheable: yes
 
-<<<<<<< HEAD
 - name: "Set IDM client secret Admin Tools."
   set_fact:
     IDM_CLIENT_SECRET_ADMIN_TOOLS: "{{ keycloak_client_admin_tools_secret_response.json.value }}"
@@ -432,13 +307,6 @@
     IDM_CLIENT_SECRET_MINIO: "{{ keycloak_client_minio_secret_response.json.value }}"
     cacheable: yes  
 
-=======
-- name: "Set IDM client secret PGAdmin."
-  set_fact:
-    IDM_CLIENT_SECRET_PGADMIN: "{{ keycloak_client_pgadmin_secret_response.json.value }}"
-    cacheable: yes
-
->>>>>>> 70f8f1d (deployment and initial configs)
 ### Following configureation will be skipped if target client already exists
 
 - name: Create API-Access roles
@@ -502,26 +370,15 @@
   register: roles_gravitee_response
   when: client_gravitee_response.status != 409
 
-<<<<<<< HEAD
 - name: Create Admin Tools roles
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_admin_tools }}/roles"
-=======
-- name: Create PGAdmin roles
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_pgadmin }}/roles"
->>>>>>> 70f8f1d (deployment and initial configs)
     return_content: yes
     body_format: json
     body: |
       {
-<<<<<<< HEAD
         "name": "adminToolsAdmin",
-=======
-        "name": "pgadminAdmin",
->>>>>>> 70f8f1d (deployment and initial configs)
         "composite": false,
         "clientRole": true
       }
@@ -529,7 +386,6 @@
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201
-<<<<<<< HEAD
   register: roles_admin_tools_response
   when: client_admin_tools_response.status != 409
 
@@ -537,24 +393,11 @@
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_masterportal }}/roles"
-=======
-  register: roles_pgadmin_response
-  when: client_pgadmin_response.status != 409
-
-- name: Create Citywalk roles
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_citywalk }}/roles"
->>>>>>> 70f8f1d (deployment and initial configs)
     return_content: yes
     body_format: json
     body: |
       {
-<<<<<<< HEAD
         "name": "masterportalAdmin",
-=======
-        "name": "citywalkAdmin",
->>>>>>> 70f8f1d (deployment and initial configs)
         "composite": false,
         "clientRole": true
       }
@@ -562,17 +405,10 @@
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201
-<<<<<<< HEAD
   register: roles_masterportal_response
   when: client_masterportal_response.status != 409
 
 - name: Create CKAN roles
-=======
-  register: roles_citywalk_response
-  when: client_citywalks_response.status != 409
-
-- name: Create ckan roles
->>>>>>> 70f8f1d (deployment and initial configs)
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_ckan }}/roles"
@@ -591,7 +427,6 @@
   register: roles_ckan_response
   when: client_ckan_response.status != 409
 
-<<<<<<< HEAD
 - name: Create MINIO roles 1/4
   uri:
     method: POST
@@ -634,21 +469,11 @@
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_minio }}/roles"
-=======
-- name: Create geodata roles
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_geodata }}/roles"
->>>>>>> 70f8f1d (deployment and initial configs)
     return_content: yes
     body_format: json
     body: |
       {
-<<<<<<< HEAD
         "name": "minioPolicyWrite",
-=======
-        "name": "geodataAdmin",
->>>>>>> 70f8f1d (deployment and initial configs)
         "composite": false,
         "clientRole": true
       }
@@ -656,7 +481,6 @@
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201
-<<<<<<< HEAD
   register: roles_minio_response
   when: client_minio_response.status != 409
 
@@ -664,24 +488,11 @@
   uri:
     method: POST
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_minio }}/roles"
-=======
-  register: roles_geodata_response
-  when: client_geodata_response.status != 409
-
-- name: Create nodered roles
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_nodered }}/roles"
->>>>>>> 70f8f1d (deployment and initial configs)
     return_content: yes
     body_format: json
     body: |
       {
-<<<<<<< HEAD
         "name": "minioPolicyRead",
-=======
-        "name": "noderedAdmin",
->>>>>>> 70f8f1d (deployment and initial configs)
         "composite": false,
         "clientRole": true
       }
@@ -689,10 +500,6 @@
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 201
-<<<<<<< HEAD
   register: roles_minio_response
   when: client_minio_response.status != 409  
-=======
-  register: roles_nodered_response
-  when: client_nodered_response.status != 409
->>>>>>> 70f8f1d (deployment and initial configs)
+
