--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_3_realm.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_3_realm.yml
@@ -18,7 +18,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms"
     return_content: yes
     body_format: json
-    body: "{{ lookup('template', 'idm/create_realm.json.j2') }}"
+    body: "{{ lookup('template', 'keycloak/realm/create_realm.json.j2') }}"
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
