--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_8_users.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_8_users.yml
@@ -18,7 +18,7 @@
     url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users"
     return_content: yes
     body_format: json
-    body: "{{ lookup('template', 'idm/users/platform_admin.json.j2') }}"
+    body: "{{ lookup('template', 'keycloak/users/platform_admin.json.j2') }}"
     headers:
       Accept: application/json
       Authorization: Bearer {{ keycloak_login.json.access_token }}
@@ -27,26 +27,8 @@
 
 - name: "User already existing."
   debug:
-    msg: "Failed. User {{ PLATFORM_ADMIN_EMAIL }} already existing?"
+    msg: "Failed. User {{ keycloak.PLATFORM_ADMIN_EMAIL }} already existing?"
   when: keycloak_platform_admin_response.status == 409
-
-- name: Create Application Admin User
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users"
-    return_content: yes
-    body_format: json
-    body: "{{ lookup('template', 'idm/users/application_admin.json.j2') }}"
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 201,409
-  register: keycloak_application_admin_response
-
-- name: "User already existing."
-  debug:
-    msg: "Failed. User {{ APPLICATION_ADMIN_EMAIL }} already existing?"
-  when: keycloak_application_admin_response.status == 409
 
 - name: Get users
   uri:
@@ -63,13 +45,7 @@
   set_fact:
     platform_user_id: "{{ users.json | json_query(query) }}"
   vars:
-    query: "[?username== '{{ PLATFORM_ADMIN_EMAIL }}'].id | [0]"
-
-- name: "Set application user id."
-  set_fact:
-    application_user_id: "{{ users.json | json_query(query) }}"
-  vars:
-    query: "[?username== '{{ APPLICATION_ADMIN_EMAIL }}'].id | [0]"
+    query: "[?username== '{{ ADMIN_USERNAME }}'].id | [0]"
 
 - name: Get roles api_access
   uri:
@@ -115,50 +91,6 @@
     status_code: 200
   register: pgadmin_roles
 
-- name: Get roles citywalk
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_citywalk }}/roles"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 200
-  register: citywalk_roles
-
-- name: Get roles ckan
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_ckan }}/roles"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 200
-  register: ckan_roles
-
-- name: Get roles geodata
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_geodata }}/roles"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 200
-  register: geodata_roles
-
-- name: Get roles nodered
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/clients/{{ client_id_nodered }}/roles"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 200
-  register: nodered_roles
-
 - name: "Set role id api_access."
   set_fact:
     api_access_role_id: "{{ api_access_roles.json | json_query(query) }}"
@@ -183,47 +115,6 @@
   vars:
     query: "[?name== 'pgadminAdmin'].id | [0]"
 
-- name: "Set role id citywalk."
-  set_fact:
-    citywalk_role_id: "{{ citywalk_roles.json | json_query(query) }}"
-  vars:
-    query: "[?name== 'citywalkAdmin'].id | [0]"
-
-- name: "Set role id ckan."
-  set_fact:
-    ckan_role_id: "{{ ckan_roles.json | json_query(query) }}"
-  vars:
-    query: "[?name== 'ckanAdmin'].id | [0]"
-
-- name: "Set role id geodata."
-  set_fact:
-    geodata_role_id: "{{ geodata_roles.json | json_query(query) }}"
-  vars:
-    query: "[?name== 'geodataAdmin'].id | [0]"
-
-- name: "Set role id nodered."
-  set_fact:
-    nodered_role_id: "{{ nodered_roles.json | json_query(query) }}"
-  vars:
-    query: "[?name== 'noderedAdmin'].id | [0]"
-
-- name: Get groups
-  uri:
-    method: GET
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/groups"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 200
-  register: realm_groups
-
-- name: "Set group id iot_tenant."
-  set_fact:
-    group_iot_tenant_id: "{{ realm_groups.json | json_query(query) }}"
-  vars:
-    query: "[?name== '{{ IDM_GROUP_IOT_TENANT_NAME }}'].id | [0]"
-
 ### Following configureation will be skipped if target user already exists
 
 - name: Set Password for User (from k8s secret)
@@ -241,22 +132,6 @@
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 204
   when: keycloak_platform_admin_response.status != 409
-
-- name: Set Password for User (initial from inventory)
-  uri:
-    method: PUT
-    url: "{{ keycloak_application_admin_response.location }}/reset-password"
-    return_content: yes
-    body_format: json
-    body: |
-        { "type":"password",
-          "value":"{{ APPLICATION_ADMIN_INITIAL_PASSWORD }}",
-          "temporary":false}
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
 
 - name: Assign Roles to Platform Admin (api-access)
   uri:
@@ -337,265 +212,3 @@
       Authorization: Bearer {{ keycloak_login.json.access_token }}
     status_code: 204
   when: keycloak_platform_admin_response.status != 409
-
-- name: Assign Roles to Platform Admin (citywalk)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ platform_user_id }}/role-mappings/clients/{{ client_id_citywalk }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ citywalk_role_id }}",
-        "name": "citywalkAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_citywalk }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_platform_admin_response.status != 409
-
-- name: Assign Roles to Platform Admin (ckan)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ platform_user_id }}/role-mappings/clients/{{ client_id_ckan }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ ckan_role_id }}",
-        "name": "ckanAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_ckan }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_platform_admin_response.status != 409
-
-- name: Assign Roles to Platform Admin (geodata)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ platform_user_id }}/role-mappings/clients/{{ client_id_geodata }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ geodata_role_id }}",
-        "name": "geodataAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_geodata }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_platform_admin_response.status != 409
-
-- name: Assign Roles to Platform Admin (nodered)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ platform_user_id }}/role-mappings/clients/{{ client_id_nodered }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ nodered_role_id }}",
-        "name": "noderedAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_nodered }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_platform_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (api-access)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_api_access }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ api_access_role_id }}",
-        "name": "dataAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_api_access }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (grafana)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_grafana }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ grafana_role_id }}",
-        "name": "grafanaAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_grafana }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (gravitee)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_gravitee }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ gravitee_role_id }}",
-        "name": "graviteeAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_gravitee }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (pgadmin)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_pgadmin }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ pgadmin_role_id }}",
-        "name": "pgadminAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_pgadmin }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (citywalk)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_citywalk }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ citywalk_role_id }}",
-        "name": "citywalkAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_citywalk }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (ckan)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_ckan }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ ckan_role_id }}",
-        "name": "ckanAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_ckan }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (geodata)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_geodata }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ geodata_role_id }}",
-        "name": "geodataAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_geodata }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Assign Roles to Application Admin (nodered)
-  uri:
-    method: POST
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/role-mappings/clients/{{ client_id_nodered }}"
-    return_content: yes
-    body_format: json
-    body: |
-      [{
-        "id": "{{ nodered_role_id }}",
-        "name": "noderedAdmin",
-        "composite": false,
-        "clientRole": true,
-        "containerId": "{{ client_id_nodered }}"
-      }]
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
-
-- name: Join Platform-Admin to IoT-Tenant Group
-  uri:
-    method: PUT
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ platform_user_id }}/groups/{{ group_iot_tenant_id }}"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_platform_admin_response.status != 409
-
-- name: Join Application-Admin to IoT-Tenant Group
-  uri:
-    method: PUT
-    url: "https://idm.{{ DOMAIN }}/auth/admin/realms/{{ IDM_REALM }}/users/{{ application_user_id }}/groups/{{ group_iot_tenant_id }}"
-    return_content: yes
-    headers:
-      Accept: application/json
-      Authorization: Bearer {{ keycloak_login.json.access_token }}
-    status_code: 204
-  when: keycloak_application_admin_response.status != 409
