--- a/03_setup_k8s_platform/deploy_idm_stack.yml
+++ b/03_setup_k8s_platform/deploy_idm_stack.yml
@@ -62,5 +62,5 @@
 
     # 99. Delete Keycloak CR
     - name: Delete Keycloak CR
-      import_tasks: tasks/idm-stack/delete_keycloak.yml
-      tags: keycloak_delete_cr
+      import_tasks: tasks/idm-stack/delete_keycloak_cr.yml
+      tags: [ 'never', 'keycloak_delete_cr' ]
