--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -21,6 +21,7 @@ K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR: data-management
 K8S_NAMESPACE_PUBLIC: public
 K8S_NAMESPACE_MONITORING: monitoring-logging
 K8S_NAMESPACE_DATAFLOWSTACK: dataflow-stack
+K8S_NAMESPACE_CONTEXT_MANAGEMENT_STACK: context-management-stack
 K8S_INGRESS_CLASS: public
 
 # GitLab-API-URL
