Issue #62: Updated deployment of MongoDB. - inventory.default: Put credentials for MongoDB in inventory-file. - deploy_context_management_stack.yml: Now checks, variables are defined (in inventory). - template 'mongodb.yml': Removed unnecessary  env-variables. - vars 'mongodb.yml': now uses values defined in inventory.

--- a/03_setup_k8s_platform/deploy_context_management_stack.yml
+++ b/03_setup_k8s_platform/deploy_context_management_stack.yml
@@ -8,13 +8,14 @@
   tasks:
     - name: Verify MongoDB credentials are set
       ansible.builtin.fail:
-        msg: "ERROR: environment variable {{ item.key | upper }} is not set."
+        msg: "ERROR: inventory variable {{ item.key | upper }} is not set."
       when: item.value  == ""
       with_items:
-       - { key: CMS_MONGODB_ROOT_USERNAME, value: "{{ lookup('env', 'CMS_MONGODB_ROOT_USERNAME') }}" }
-       - { key: CMS_MONGODB_ROOT_PASSWORD, value: "{{ lookup('env', 'CMS_MONGODB_ROOT_PASSWORD') }}" }
-       - { key: CMS_MONGODB_USERNAME, value: "{{ lookup('env', 'CMS_MONGODB_USERNAME') }}" }
-       - { key: CMS_MONGODB_PASSWORD, value: "{{ lookup('env', 'CMS_MONGODB_PASSWORD') }}" }
+       - { key: CMS_MONGO_INITDB_DATABASE, value: "{{ lookup('vars', 'CMS_MONGO_INITDB_DATABASE') }}"}
+       - { key: CMS_MONGO_INITDB_ROOT_USERNAME, value: "{{ lookup('vars', 'CMS_MONGO_INITDB_ROOT_USERNAME') }}" }
+       - { key: CMS_MONGO_INITDB_ROOT_PASSWORD, value: "{{ lookup('vars', 'CMS_MONGO_INITDB_ROOT_PASSWORD') }}" }
+       - { key: CMS_ORION_MONGODB_USER, value: "{{ lookup('vars', 'CMS_ORION_MONGODB_USER') }}" }
+       - { key: CMS_ORION_MONGODB_PASSWORD, value: "{{ lookup('vars', 'CMS_ORION_MONGODB_PASSWORD') }}" }
       tags: always
 
     - name: Read default values
