--- a/03_setup_k8s_platform/vars/context_management-stack/mongodb.yml
+++ b/03_setup_k8s_platform/vars/context_management-stack/mongodb.yml
@@ -6,11 +6,11 @@ image_tag: "3.6"
 securityContext_fsGroup: 1001
 securityContext_runAsUser: 1001
 
-database: orion
-root_username: "{{ lookup('env', 'CMS_MONGODB_ROOT_USERNAME') }}"
-root_password: "{{ lookup('env', 'CMS_MONGODB_ROOT_PASSWORD') }}"
-username: "{{ lookup('env', 'CMS_MONGODB_USERNAME') }}"
-password: "{{ lookup('env', 'CMS_MONGODB_PASSWORD') }}"
+database: "{{ CMS_MONGO_INITDB_DATABASE }}"
+root_username: "{{ CMS_MONGO_INITDB_ROOT_USERNAME }}"
+root_password: "{{ CMS_MONGO_INITDB_ROOT_PASSWORD }}"
+username: "{{ CMS_ORION_MONGODB_USER }}"
+password: "{{ CMS_ORION_MONGODB_PASSWORD }}"
 
 extra_flags: "--nojournal --storageEngine wiredTiger --maxConns 5000"
 
