Issue #102: Updated Ansible files and documentation. Please, also take a look at commit 0090431acf871efc0f9a051f81c23c7f3b68d2c9 for the QGIS Server Docker image.

--- a/03_setup_k8s_platform/files/webgis-qgisserver/Dockerfile
+++ b/03_setup_k8s_platform/files/webgis-qgisserver/Dockerfile
@@ -36,6 +36,10 @@ ENV QGIS_PREFIX_PATH /usr
 ENV QGIS_SERVER_LOG_STDERR 1
 ENV QGIS_SERVER_LOG_LEVEL 2
 
+COPY qgis-sample.qgs /data/qgis/project.qgs
+RUN chmod -R 644 /data/qgis/project.qgs
+RUN chown qgis:qgis /data/qgis/project.qgs
+
 COPY cmd.sh /home/qgis/cmd.sh
 RUN chmod -R 777 /home/qgis/cmd.sh
 RUN chown qgis:qgis /home/qgis/cmd.sh
