--- a/03_setup_k8s_platform/update_qgis_project_playbook.yml
+++ b/03_setup_k8s_platform/update_qgis_project_playbook.yml
@@ -27,43 +27,15 @@
       ansible.builtin.set_fact:
         qgisserver_project_file: "{{ qgisserver.env_QGIS_PROJECT_FILE }}"
 
-    - name: Set facts to access GitLab repository
-      ansible.builtin.set_fact:
-        gitlab_api_url: "{{ default.GITLAB_API_URL }}"
-        gitlab_api_access_token: "{{ GITLAB_API_ACCESS_TOKEN }}"
-        gitlab_project: "{{ qgisserver.QGIS_CUSTOM_GITLAB_PROJECT }}"
-
-    - name: "Get latest version of QGIS project file '{{ qgisserver_project_file }}}'"
-      ansible.builtin.uri:
-        url: "{{ gitlab_api_url }}/projects/{{ gitlab_project | regex_replace('\\/','%2F') }}/repository/files/{{ qgisserver_project_file | regex_replace('\\.','%2E') }}?ref=master"
-        method: GET
-        return_content: true
-        headers:
-          PRIVATE-TOKEN: "{{ gitlab_api_access_token }}"
-      register: qgis_file
-
-    - name: Decode QGIS project file payload
-      ansible.builtin.set_fact:
-        qgis_file_content: "{{ qgis_file.json.content | regex_replace('\n','') | b64decode }}"
-      when: qgis_file is defined
-
-    - name: "Update ConfigMap {{ qgisserver_project_file }}"
-      kubernetes.core.k8s:
+    - name: Check for Secret gitlab-registry in Namespace "{{ k8s_namespace }}"
+      kubernetes.core.k8s_info:
+        api_version: v1
+        kind: Secret
+        name: "gitlab-registry"
+        namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
-        namespace: "{{ k8s_namespace }}"
-        definition:
-          kind: ConfigMap
-          api_version: v1
-          metadata:
-            name: "{{ qgisserver_project_file }}"
-            namespace: "{{ k8s_namespace | lower }}"
-          data:
-            project.qgs: "{{ qgis_file_content }}"
-        state: present
-        apply: yes
-      register: cm_project_qgis
-      when: qgis_file_content is defined
+      register: gitlab_registry_secret
 
     - name: Get deployment info of QGIS Server
       kubernetes.core.k8s_info:
@@ -90,5 +62,94 @@
       args:
         executable: /bin/bash
       when:
-        - cm_project_qgis.changed
         - qgis_server_deployment_name is defined
+
+    # After redeployment, we have to
+    # - wait until the new Pod, running QGIS Server component server, has been crated.
+    # - create /home/qgis/.pg_service.conf in Pod running QGIS Server component server.
+    # - restart the Pod running QGIS Server component http.
+    - name: Wait till new QGIS Server Pod is up and running
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=server
+        wait: yes
+        wait_sleep: 10
+        wait_timeout: 360
+
+    - name: Get Pod running QGIS Server component http
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=http
+      register: qgis_server_http_pod_info
+
+    - name: Get name of Pod running QGIS Server component http
+      ansible.builtin.set_fact:
+        qgis_server_http_pod_name: "{{ qgis_server_http_pod_info['resources'][0]['metadata']['name'] }}"
+      when: qgis_server_http_pod_info is defined
+
+    - name: Get Pod running QGIS Server component server
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=server
+      register: qgis_server_server_pod_info
+
+    - name: Get name of Pod running QGIS Server component server
+      ansible.builtin.set_fact:
+        qgis_server_server_pod_name: "{{ qgis_server_server_pod_info['resources'][0]['metadata']['name'] }}"
+      when: qgis_server_server_pod_info is defined
+
+    - debug:
+        msg: "Name of HTTP Pod: {{ qgis_server_http_pod_name }}"
+
+    - debug:
+        msg: "Name of Server Pod: {{ qgis_server_server_pod_name }}"
+
+    - name: Create /home/qgis/.pg_service.conf in Pod running QGIS Server component server
+      ansible.builtin.shell: |
+        kubectl --kubeconfig {{ k8s_config }} -n {{ k8s_namespace | lower }} exec {{ qgis_server_server_pod_name }} -- bash -c "cat {{ qgisserver.pgservicefile_dir }}/{{ qgisserver.pgservicefile }} > /home/qgis/.pg_service.conf"
+      args:
+        executable: /bin/bash
+      when: qgis_server_http_pod_name is defined
+
+    - name: Restart Pod running QGIS Server component http
+      ansible.builtin.shell: |
+        kubectl --kubeconfig="{{ k8s_config }}" --namespace "{{ k8s_namespace | lower }}" delete pod "{{ qgis_server_http_pod_name }}"
+      args:
+        executable: /bin/bash
+      when: qgis_server_http_pod_name is defined
+
+    # - name: Pause one minute to wait until Pod has been restarted
+    #   pause:
+    #     minutes: 1
+
+    - name: Wait till the new Pod, running QGIS Server component http, is up and running
+      community.kubernetes.k8s_info:
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
+        namespace: "{{ k8s_namespace }}"
+        kind: Pod
+        label_selectors:
+          - app.kubernetes.io/instance=geodata-qgisserver
+          - app=webgis-qgisserver
+          - component=http
+        wait: yes
+        wait_sleep: 10
+        wait_timeout: 360
