--- a/03_setup_k8s_platform/vars/webgis_qgisserver.yml
+++ b/03_setup_k8s_platform/vars/webgis_qgisserver.yml
@@ -4,7 +4,7 @@
 HELM_CHART_NAME: webgis-qgisserver
 HELM_RELEASE_NAME: geodata-qgisserver
 
-# Name of the GitLab project where we store our QGIS project file
+# Name of the GitLab project where we store all files to build QGIS Docker image.
 QGIS_CUSTOM_GITLAB_PROJECT: "berlintxl/futr-hub/platform/qgis-server-customizing"
 
 # Helm sepcific settings
