Issue #62: Updated deployment of MongoDB. Ansible now creates user CMS_ORION_MONGODB_USER with CMS_ORION_MONGODB_PASSWORD for database CMS_MONGO_INITDB_DATABASE with Read-/Write permissions. Requires Ansible Galaxy collection 'community.mongodb' and Python module 'pymongo'!

--- a/03_setup_k8s_platform/templates/context_management-stack/mongodb.yml
+++ b/03_setup_k8s_platform/templates/context_management-stack/mongodb.yml
@@ -93,13 +93,13 @@ kind: Service
 metadata:
   labels:
     app: orion-mongodb
-  name: orion-mongodb
+  name: {{ mongodb.service_name }}
 spec:
   type: ClusterIP
   ports:
   - name: mongodb
-    port: 27017
-    targetPort: 27017
+    port: {{ mongodb.port }}
+    targetPort: {{ mongodb.port }}
   selector:
     app: orion-mongodb
 status:
