--- a/03_setup_k8s_platform/tasks/context_management-stack/install_orion.yml
+++ b/03_setup_k8s_platform/tasks/context_management-stack/install_orion.yml
@@ -36,3 +36,15 @@
     definition: "{{ item }}"
   loop:
     - "{{ lookup('template', 'templates/context_management-stack/orion.yml') | from_yaml_all | list }}"
+
+- name: Wait till deployment of Orion is completed
+  community.kubernetes.k8s_info:
+    kubeconfig: "{{ k8s_config }}"
+    context: "{{ k8s_context }}"
+    namespace: "{{ k8s_namespace }}"
+    kind: Pod
+    label_selectors:
+      - app=orion
+    wait: yes
+    wait_sleep: 10
+    wait_timeout: 360
